--- a/frontend/src/components/statics/css/courseBox.css
+++ b/frontend/src/components/statics/css/courseBox.css
@@ -7,7 +7,7 @@
     max-height: 630px;
     position: relative;
     margin: 0px auto;
-    background: var(--white);
+    background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .courseBox_courseTextTitle {
@@ -38,6 +38,7 @@
     left: 30px;
     line-height: 0.95em;
     list-style-type: none;
+    color: var(--primaryTextColor);
   }
   .courseBox_courseTextCodeSelected {
     width: 85%;
@@ -55,7 +56,7 @@
     font-weight: 600;
     position: relative;
     list-style-type: none;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
   .courseBox_courseTextCredit {
     font-size: 0.8em;
@@ -64,7 +65,7 @@
     top: 15px;
     right: 10px;
     list-style-type: none;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
 }
 
@@ -74,7 +75,7 @@
     border-radius: 25px;
     position: relative;
     margin: 0px auto;
-    background: var(--white);
+    background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .courseBox_courseTextTitle {
