--- a/frontend/src/components/statics/css/smallCards.css
+++ b/frontend/src/components/statics/css/smallCards.css
@@ -4,6 +4,7 @@
     width: 360px;
     height: 220px;
     border-radius: 20px;
+    background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .smallCards_root {
@@ -46,6 +47,7 @@
     padding: 0px;
     font-size: 1.7em;
     font-weight: bold;
+    color: var(--primaryTextColor);
   }
 
   .smallCards_row_col_1_light {
@@ -53,7 +55,7 @@
     padding: 0px;
     font-size: 0.8em;
     font-weight: 600;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
 
   .smallCards_row_col_2_bold {
@@ -61,6 +63,7 @@
     padding: 0px;
     font-size: 1.1em;
     font-weight: bold;
+    color: var(--primaryTextColor);
   }
 
   .smallCards_row_col_2_light {
@@ -68,7 +71,7 @@
     padding: 0px;
     font-size: 0.9em;
     font-weight: 600;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
 
   .smallCards_row2_bot {
@@ -82,9 +85,10 @@
     color: var(--blue);
   }
 
-  .smallcards_timetext {
+  .smallCards_timeText {
     font-size: 1em;
     font-weight: 400;
+    color: var(--primaryTextColor);
   }
 }
 
@@ -93,6 +97,7 @@
     width: calc(255px + 2vw);
     height: calc(160px + 2vw);
     border-radius: 20px;
+    background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .smallCards_root {
@@ -133,6 +138,7 @@
     padding: 0px;
     font-size: 1.7em;
     font-weight: bold;
+    color: var(--primaryTextColor);
   }
 
   .smallCards_row_col_1_light {
@@ -140,7 +146,7 @@
     padding: 0px;
     font-size: 0.8em;
     font-weight: 600;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
 
   .smallCards_row_col_2_bold {
@@ -148,6 +154,7 @@
     padding: 0px;
     font-size: 1.1em;
     font-weight: bold;
+    color: var(--primaryTextColor);
   }
 
   .smallCards_row_col_2_light {
@@ -155,7 +162,7 @@
     padding: 0px;
     font-size: 0.9em;
     font-weight: 600;
-    color: var(--grey1);
+    color: var(--secondaryTextColor);
   }
 
   .smallCards_row2_bot {
@@ -169,8 +176,9 @@
     color: var(--blue);
   }
 
-  .smallcards_timetext {
+  .smallCards_timeText {
     font-size: 1em;
     font-weight: 400;
+    color: var(--primaryTextColor);
   }
 }
