--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -1,7 +1,7 @@
 @import "../../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .loginCommon_loginButton {
-    width: 300px;
+    width: 200px;
     height: 50px;
     background-color: var(--red4);
     color: var(--white);
@@ -14,7 +14,7 @@
     margin: 0px;
   }
   .loginCommon_guestButton {
-    width: 300px;
+    width: 200px;
     height: 50px;
     background-color: var(--black);
     color: var(--white);
@@ -24,14 +24,15 @@
   .loginCommon_inputButton {
     outline: none;
     border: none;
-    width: 300px;
+    width: 250px;
     height: 50px;
-    border-bottom: 1px solid var(--grey2);
+    padding: 20px 0px 0px 0px;
+    border-bottom: 2px solid var(--grey2);
     font-size: 1em;
     background: transparent;
   }
   .loginCommon_line {
-    width: 130px;
+    width: 100px;
     height: 1px;
     background-color: var(--grey1);
     margin: 0px auto;
@@ -41,15 +42,13 @@
   }
   .loginCommon_rememberMeCheckContainer {
     line-height: 20px;
-  }
-  .loginCommon_rememberMeCheck {
-    width: 20px;
+    padding: 20px 0px 20px 0px;
   }
 }
 
 @media only screen and (max-width: 1919px) {
   .loginCommon_loginButton {
-    width: 300px;
+    width: 200px;
     height: 50px;
     background-color: var(--red4);
     color: var(--white);
@@ -61,7 +60,7 @@
     font-size: 2.2em;
   }
   .loginCommon_guestButton {
-    width: 300px;
+    width: 200px;
     height: 50px;
     background-color: var(--black);
     color: var(--white);
@@ -71,10 +70,11 @@
   .loginCommon_inputButton {
     outline: none;
     border: none;
-    width: 300px;
+    width: 280px;
     height: 50px;
-    border-bottom: 1px solid var(--grey2);
-    font-size: 1.3em;
+    border-bottom: 2px solid var(--grey2);
+    padding: 15px 0px 0px 0px;
+    font-size: 1.1em;
     background: transparent;
   }
   .loginCommon_line {
@@ -85,12 +85,10 @@
   }
   .loginCommon_inputLabel {
     font-size: 1.2em;
-    border: 1px solid black;
   }
   .loginCommon_rememberMeCheckContainer {
-    position: relative;
-    top: -10px;
     line-height: 20px;
+    padding: 15px 0px 15px 0px;
   }
   .loginCommon_rememberMeCheck {
     width: 20px;
