--- a/frontend/src/views/Profile/statics/css/profile.css
+++ b/frontend/src/views/Profile/statics/css/profile.css
@@ -14,7 +14,7 @@
     background: var(--white) !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
-  input {
+  #profile-box input {
     width: 100%;
     outline: none !important;
     border-top: 0px !important;
