--- a/frontend/src/components/statics/css/courseBox.css
+++ b/frontend/src/components/statics/css/courseBox.css
@@ -9,6 +9,7 @@
     margin: 0px auto;
     background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
   }
   .courseBox_courseTextTitle {
     margin: 0px;
