--- a/frontend/src/components/statics/css/dashboardLayout.css
+++ b/frontend/src/components/statics/css/dashboardLayout.css
@@ -20,6 +20,9 @@
     height: 100vh;
     cursor: pointer;
     border-left: 1px solid rgba(127, 127, 127, 0.2);
+    position: relative;
+    overflow: hidden;
+    overflow-y: scroll;
   }
 }
 @media only screen and (max-width: 1919px) {
@@ -43,9 +46,8 @@
     height: 100vh;
     cursor: pointer;
     border-left: 1px solid rgba(127, 127, 127, 0.2);
+    position: relative;
+    overflow: hidden;
+    overflow-y: scroll;
   }
-}
-
-@media only screen and (max-width: 1919px){
-  
 }
