--- a/frontend/src/components/statics/css/note.css
+++ b/frontend/src/components/statics/css/note.css
@@ -1,71 +1,74 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
-  .notes_root {
+  .note_root {
     width: 100% !important;
-    height: 92vh;
+    height: 880px;
     position: relative;
     background: var(--white);
     border-radius: 20px;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
     flex-grow: 1;
   }
-  .notes_notePadTop {
+  .note_notePadTop {
     width: 100%;
-  }
-  .notes_line {
-    background-color: var(--grey1);
-    opacity: 30%;
-    width: 90%;
-    height: 2px;
-    position: relative;
-    margin-top: 15px;
-    left: 38px;
-  }
-  .notes_titleTextContainer {
-    position: relative;
-    margin-top: 30px;
-  }
-  .notes_titleText {
-    position: relative;
-    font-weight: bold;
-    font-size: 1.6em;
-    cursor: text;
-    position: relative;
-    margin-left: 40px;
-  }
-  .notes_closeButtonContainer {
     height: 80px;
   }
-  .notes_closeButton {
+  .note_titleTextContainer {
+    margin: 0px;
+    height: 80px;
+    position: relative;
+  }
+  .note_titleText {
+    width: 95%;
+    position: relative;
+    font-weight: 600;
+    font-size: 1.5em;
+    cursor: text;
+    position: relative;
+    margin: 0px;
+    line-height: 3.3em;
+    margin-left: 40px;
+    outline: none;
+    border: 0;
+  }
+  .note_closeButtonContainer {
+    height: 80px;
+  }
+  .note_closeButton {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     cursor: pointer;
     padding: 8px;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 15px;
+    right: 15px;
   }
-  .notes_notePadBot {
+  .note_notePadBot {
     width: 100%;
+    height: 750px;
     text-align: justify;
     position: relative;
+    overflow: hidden;
+    overflow-y: scroll;
   }
-  .notes_contentTextContainer {
+  .note_contentTextContainer {
     width: 90%;
+    height: 100%;
     margin: 0px auto !important;
     text-align: justify;
   }
-  .notes_contentText {
+  .note_contentText {
     position: relative;
     font-size: 1.15em;
+    line-height: 1.8em;
   }
-  .notes_trashButtonContainer {
+  .note_trashButtonContainer {
     position: absolute;
     right: 20px;
     bottom: 15px;
   }
-  .notes_trashButton {
+  .note_trashButton {
     bottom: 50px;
     width: 20px;
     height: 20px;
@@ -77,71 +80,70 @@
 }
 
 @media only screen and (max-width: 1919px) {
-  .notes_root {
+  .note_root {
+    width: 100% !important;
     height: 92vh;
+    position: relative;
     background: var(--white);
     border-radius: 20px;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
     flex-grow: 1;
   }
-  .notes_notePadTop {
+  .note_notePadTop {
     width: 100%;
+    height: 60px;
   }
-  .notes_line {
-    background-color: var(--grey1);
-    opacity: 30%;
-    width: 90%;
-    height: 2px;
+  .note_titleTextContainer {
     position: relative;
-    margin-top: 15px;
-    left: 38px;
   }
-  .notes_titleTextContainer {
-    position: relative;
-    margin-top: 30px;
-  }
-  .notes_titleText {
+  .note_titleText {
+    width: 93%;
     position: relative;
     font-weight: bold;
     font-size: 1.2em;
     cursor: text;
     position: relative;
-    margin-left: 8%;
+    margin: 0px;
+    margin-left: 5% !important;
+    outline: none;
+    border: 0;
   }
-  .notes_notePadBot {
+  .note_notePadBot {
+    width: 100%;
     text-align: justify;
     position: relative;
     top: 25px;
   }
-  .notes_contentTextContainer {
+  .note_contentTextContainer {
     width: 88%;
     text-align: justify;
     line-height: 1.85em;
     position: relative;
     left: 5%;
   }
-  .notes_contentText {
+  .note_contentText {
     position: relative;
     font-size: 1em;
   }
-  .notes_closeButtonContainer {
-    height: 80px;
+  .note_closeButtonContainer {
+    height: 60px;
   }
-  .notes_closeButton {
+  .note_closeButton {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     padding: 8px;
     cursor: pointer;
     position: absolute;
-    top: 25px;
+    top: 2%;
+    right: 1.5%;
   }
-  .notes_trashButtonContainer {
+  .note_trashButtonContainer {
     position: absolute;
-    right: 20px;
-    top: 100%;
+    right: 10px;
+    bottom: 10px;
   }
-  .notes_trashButton {
+  .note_trashButton {
     width: 20px;
     height: 20px;
     padding: 8px;
