--- a/frontend/src/views/Notes/statics/css/notes.css
+++ b/frontend/src/views/Notes/statics/css/notes.css
@@ -1,70 +1,70 @@
 @import "../../../../utils/colors.css";
 
 @media only screen and (min-width: 1920px) {
-  .note_root {
+  .notes_root {
     width: 96% !important;
     margin: 0px auto !important;
     position: relative;
     flex-grow: 1;
   }
-  .note_creator {
+  .notes_creator {
     height: 96vh;
     overflow: scroll;
     overflow-x: hidden;
   }
-  .note_creatorInside {
+  .notes_creatorInside {
     margin: 0px auto !important;
   }
-  .note_creatorTop {
+  .notes_creatorTop {
     height: 120px !important;
   }
-  .note_creatorTopInside {
+  .notes_creatorTopInside {
     height: 120px !important;
   }
-  .note_textContainer {
+  .notes_textContainer {
     height: 120px !important;
   }
-  .note_text {
+  .notes_text {
     font-weight: bold !important;
     font-size: 2.5em !important;
     margin-left: 5%;
   }
-  .note_creatorBot {
+  .notes_creatorBot {
     position: relative !important;
   }
-  .note_pad {
+  .notes_pad {
     height: 100vh !important;
   }
-  .note_sidebarComponent {
+  .notes_sidebarComponent {
     padding: 10px !important;
   }
-  .note_padArea {
+  .notes_padArea {
   }
-  .note_padTop {
+  .notes_padTop {
     width: 86% !important;
     position: relative !important;
     left: 25px !important;
   }
-  .note_padBot {
+  .notes_padBot {
     width: 100%;
     position: relative !important;
     top: 10px !important;
     left: 0px !important;
   }
-  .note_sidebarcontainer {
+  .notes_sidebarcontainer {
   }
-  .note_padContainer {
+  .notes_padContainer {
     position: relative !important;
     top: 5% !important;
   }
-  .note_plusIcon {
+  .notes_plusIcon {
     cursor: pointer;
     position: relative;
     height: 30px !important;
     top: 8%;
     right: 5%;
   }
-  .note_gridIconsContainer {
+  .notes_gridIconsContainer {
     width: 70px !important;
     float: right !important;
     cursor: pointer !important;
@@ -72,68 +72,68 @@
 }
 
 @media only screen and (max-width: 1919px) {
-  .note_root {
+  .notes_root {
     width: 98% !important;
     margin: 0px auto !important;
     position: relative;
     flex-grow: 1;
   }
-  .note_creator {
+  .notes_creator {
     height: 96vh;
     overflow: scroll;
     overflow-x: hidden;
   }
-  .note_creatorInside {
+  .notes_creatorInside {
     margin: 0px auto !important;
   }
-  .note_creatorTop {
+  .notes_creatorTop {
     height: 90px !important;
-    width: 100%;
   }
-  .note_creatorTopInside {
+  .notes_creatorTopInside {
     height: 90px !important;
-    margin: 0px auto !important;
   }
-  .note_textContainer {
+  .notes_textContainer {
     height: 90px !important;
-    position: relative;
   }
-  .note_text {
+  .notes_text {
     font-weight: bold !important;
     font-size: 1.9em !important;
     margin-left: 5%;
   }
-  .note_creatorBot {
+  .notes_creatorBot {
     position: relative !important;
   }
-  .note_pad {
+  .notes_pad {
     height: 100vh !important;
   }
-  .note_sidebarComponent {
+  .notes_sidebarComponent {
     padding: 10px !important;
   }
-  .note_padArea {
+  .notes_padArea {
   }
-  .note_padTop {
-    width: 55% !important;
+  .notes_padTop {
+    width: 86% !important;
+    position: relative !important;
+    left: 25px !important;
   }
-  .note_padBot {
+  .notes_padBot {
+    width: 100%;
     position: relative !important;
     top: 10px !important;
   }
-  .note_sidebarcontainer {
+  .notes_sidebarcontainer {
   }
-  .note_padContainer {
+  .notes_padContainer {
     position: relative !important;
     top: 5% !important;
   }
-  .note_plusIcon {
+  .notes_plusIcon {
     cursor: pointer !important;
     position: relative;
     top: 8%;
     right: 5%;
   }
-  .note_gridIconsContainer {
+  .notes_gridIconsContainer {
     width: 70px !important;
     float: right !important;
     cursor: pointer !important;
