--- a/frontend/src/components/statics/css/note.css
+++ b/frontend/src/components/statics/css/note.css
@@ -110,9 +110,13 @@
   }
   .note_notePadBot {
     width: 100%;
+    height: 70vh;
     text-align: justify;
     position: relative;
     top: 25px;
+
+    overflow: hidden;
+    overflow-y: scroll;
   }
   .note_contentTextContainer {
     width: 88%;
