Back to login button added

--- a/frontend/src/views/Login/statics/css/forgotPassword.css
+++ b/frontend/src/views/Login/statics/css/forgotPassword.css
@@ -24,7 +24,15 @@
     font-size: 1.1em;
     background: transparent;
   }
-
+  .forgotPassword_guestButton {
+    width: 160px;
+    height: 45px;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.05em;
+    margin: 40px;
+  }
   .forgotPassword_inputLabel {
     font-size: 1.2em;
   }
@@ -54,7 +62,15 @@
     font-size: 1.1em;
     background: transparent;
   }
-
+  .forgotPassword_guestButton {
+    width: 160px;
+    height: 45px;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.05em;
+    margin: 40px;
+  }
   .forgotPassword_inputLabel {
     font-size: 1.2em;
   }
