css fixed for 720p display

--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -84,4 +84,9 @@
   .loginCommon_rememberMeCheck {
     width: 20px;
   }
+  .loginCommon_forgetButton {
+    color: var(-black);
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
