--- a/backend/templates/email-templates/verify-account.html
+++ b/backend/templates/email-templates/verify-account.html
@@ -113,7 +113,7 @@
         </div>
         <div id="accentLine1"></div>
         <div>
-            <button id="actionButton" onlick="location.href='{{link}}'">Verify Email</button>
+            <a href="{{link}}"><button id="actionButton">Verify Email</button></a>
             <p id="bottomText">or click this link: <a href="{{link}}"></a>{{link}}</a></p>
         </div>
         <div id="footer">&copy 2021 Sikshyalaya <br /> University Road, 28Kilo, Dhulikhel, Kavre
