--- a/frontend/src/views/Landing/statics/css/landing.css
+++ b/frontend/src/views/Landing/statics/css/landing.css
@@ -86,8 +86,8 @@
     margin-left: 30px !important;
   }
   .landing_currentContainer {
-    width: 95%;
-    margin: 0px auto !important;
+    width: 50%;
+    margin-left: 30px;
   }
   .landing_activeTitle {
     display: inline-block;
@@ -97,8 +97,11 @@
   }
   .landing_upCommingCourseBar {
     position: relative;
-    margin-right: 2vw;
-    margin-bottom: 10%;
+  }
+  .landing_upCommingContainerBox {
+    width: 50%;
+    padding: 2%;
+    margin: 0px auto;
   }
   .landing_upcomingIcon {
     display: inline-block;
