--- a/frontend/src/views/Dashboard/statics/css/dashboard.css
+++ b/frontend/src/views/Dashboard/statics/css/dashboard.css
@@ -6,26 +6,32 @@
     margin: 0px auto !important;
     position: relative !important;
     flex-grow: 1 !important;
+    border: 1px solid black;
   }
 
   .mainDash_topBar {
     width: 100% !important;
     height: 50px !important;
     margin-top: 50px !important;
+    border: 1px solid black;
   }
   .mainDash_botBar {
     width: 100% !important;
     height: 810px !important;
     margin-top: 20px !important;
+    border: 1px solid black;
   }
   .mainDash_leftContainer {
     height: 810px !important;
+    border: 1px solid black;
   }
   .mainDash_middleContainer {
     height: 810px !important;
+    border: 1px solid black;
   }
   .mainDash_rightContainer {
     height: 810px !important;
+    border: 1px solid black;
   }
   .mainDash_activeClassBoxContainer {
     width: 95% !important;
@@ -33,10 +39,13 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid black;
   }
   .mainDash_activeClassBoxInside {
+    border: 1px solid black;
   }
   .mainDash_activeClassBoxTop {
+    border: 1px solid black;
   }
   .mainDash_smallRedBox {
     width: 20px;
@@ -45,11 +54,13 @@
     background: var(--red4);
     position: relative;
     margin-left: 20px !important;
+    border: 1px solid black;
   }
   .mainDash_activeClassTitle {
     position: relative;
     left: 15px;
     font-size: 1.7em;
+    border: 1px solid black;
   }
   .mainDash_classResourcesBoxContainer {
     width: 95% !important;
@@ -76,6 +87,11 @@
     left: 15px;
     font-size: 1.7em;
   }
+  .mainDash_classResourceBoxBottom {
+    height: 430px;
+    overflow: hidden;
+    overflow-y: auto;
+  }
   .mainDash_discussionBoxContainer {
     width: 95% !important;
     height: 800px !important;
@@ -85,95 +101,26 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_discussionBoxInside {
+    border: 1px solid black;
   }
   .mainDash_discussionBoxTop {
+    border: 1px solid black;
   }
   .mainDash_smallBlueBox {
+    border: 1px solid black;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background: var(--blue);
     position: relative;
     margin-left: 20px !important;
+    border: 1px solid black;
   }
   .mainDash_discussionBoxTitle {
     position: relative;
     left: 15px;
     font-size: 1.7em;
-  }
-  .mainDash_postBoxContainer {
-    width: 95% !important;
-    height: 250px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_postBoxInside {
-  }
-  .mainDash_postBoxTop {
-  }
-  .mainDash_smallGreenBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--green2);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_postBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.7em;
-  }
-  .mainDash_quizBoxContainer {
-    width: 95% !important;
-    height: 250px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_quizBoxInside {
-  }
-  .mainDash_quizBoxTop {
-  }
-  .mainDash_smallYellowBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--yellow);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_quizBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.7em;
-  }
-  .mainDash_tbdBoxContainer {
-    width: 95% !important;
-    height: 250px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_tbdBoxInside {
-  }
-  .mainDash_tbdBoxTop {
-  }
-  .mainDash_smallBlueBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--blue);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_tbdBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.7em;
+    border: 1px solid black;
   }
 }
 
@@ -255,6 +202,8 @@
     left: 15px;
     font-size: 1.3em;
   }
+  .mainDash_classResourceBoxBottom {
+  }
   .mainDash_discussionBoxContainer {
     height: 650px !important;
     margin: 0px auto !important;
@@ -275,80 +224,6 @@
     margin-left: 20px !important;
   }
   .mainDash_discussionBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.3em;
-  }
-  .mainDash_postBoxContainer {
-    width: 90% !important;
-    height: 200px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_postBoxInside {
-  }
-  .mainDash_postBoxTop {
-  }
-  .mainDash_smallGreenBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--green2);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_postBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.3em;
-  }
-  .mainDash_quizBoxContainer {
-    width: 90% !important;
-    height: 200px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_quizBoxInside {
-  }
-  .mainDash_quizBoxTop {
-  }
-  .mainDash_smallYellowBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--yellow);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_quizBoxTitle {
-    position: relative;
-    left: 15px;
-    font-size: 1.3em;
-  }
-  .mainDash_tbdBoxContainer {
-    width: 90% !important;
-    height: 200px !important;
-    background: var(--white) !important;
-    border-radius: 15px !important;
-    margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-  }
-  .mainDash_tbdBoxInside {
-  }
-  .mainDash_tbdBoxTop {
-  }
-  .mainDash_smallBlueBox {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: var(--blue);
-    position: relative;
-    margin-left: 20px !important;
-  }
-  .mainDash_tbdBoxTitle {
     position: relative;
     left: 15px;
     font-size: 1.3em;
