--- a/frontend/src/components/statics/css/profileBox.css
+++ b/frontend/src/components/statics/css/profileBox.css
@@ -49,7 +49,7 @@
   }
   .profileBox_buttonContainer {
     width: 20%;
-    margin-top: 0px;
+    margin-top: 10px !important;
   }
   .profileBox_profileButton {
     width: 40px;
