--- a/frontend/src/views/Dashboard/components/statics/css/resourceIcons.css
+++ b/frontend/src/views/Dashboard/components/statics/css/resourceIcons.css
@@ -9,4 +9,10 @@
 }
 
 @media only screen and (max-width: 1919px) {
+  .resourceIcons_iconStyle {
+    width: 28px;
+    height: 28px;
+    display: block;
+    margin: 0px auto;
+  }
 }
