--- a/frontend/src/views/Dashboard/statics/css/dashboard.css
+++ b/frontend/src/views/Dashboard/statics/css/dashboard.css
@@ -6,32 +6,26 @@
     margin: 0px auto !important;
     position: relative !important;
     flex-grow: 1 !important;
-    border: 1px solid black;
   }
 
   .mainDash_topBar {
     width: 100% !important;
     height: 50px !important;
     margin-top: 50px !important;
-    border: 1px solid black;
   }
   .mainDash_botBar {
     width: 100% !important;
     height: 810px !important;
     margin-top: 20px !important;
-    border: 1px solid black;
   }
   .mainDash_leftContainer {
     height: 810px !important;
-    border: 1px solid black;
   }
   .mainDash_middleContainer {
     height: 810px !important;
-    border: 1px solid black;
   }
   .mainDash_rightContainer {
     height: 810px !important;
-    border: 1px solid black;
   }
   .mainDash_activeClassBoxContainer {
     width: 95% !important;
@@ -39,13 +33,10 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-    border: 1px solid black;
   }
   .mainDash_activeClassBoxInside {
-    border: 1px solid black;
   }
   .mainDash_activeClassBoxTop {
-    border: 1px solid black;
   }
   .mainDash_smallRedBox {
     width: 20px;
@@ -54,13 +45,14 @@
     background: var(--red4);
     position: relative;
     margin-left: 20px !important;
-    border: 1px solid black;
   }
   .mainDash_activeClassTitle {
     position: relative;
     left: 15px;
     font-size: 1.7em;
-    border: 1px solid black;
+  }
+  .mainDash_activeClassBoxBottom {
+    height: 172px;
   }
   .mainDash_classResourcesBoxContainer {
     width: 95% !important;
@@ -101,26 +93,24 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_discussionBoxInside {
-    border: 1px solid black;
   }
   .mainDash_discussionBoxTop {
-    border: 1px solid black;
   }
   .mainDash_smallBlueBox {
-    border: 1px solid black;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background: var(--blue);
     position: relative;
     margin-left: 20px !important;
-    border: 1px solid black;
   }
   .mainDash_discussionBoxTitle {
     position: relative;
     left: 15px;
     font-size: 1.7em;
-    border: 1px solid black;
+  }
+  .mainDash_discussionBoxBottom {
+    height: 720px;
   }
 }
 
@@ -177,6 +167,8 @@
     left: 15px;
     font-size: 1.3em;
   }
+  .mainDash_activeClassBoxBottom {
+  }
   .mainDash_classResourcesBoxContainer {
     width: 90% !important;
     height: 412px !important;
@@ -203,6 +195,9 @@
     font-size: 1.3em;
   }
   .mainDash_classResourceBoxBottom {
+    height: 345px;
+    overflow: hidden;
+    overflow-y: auto;
   }
   .mainDash_discussionBoxContainer {
     height: 650px !important;
