--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -4,6 +4,7 @@
   --accentColor: #f14b4b;
   --primaryTextColor: #2c2e32;
   --secondaryTextColor: #676f79;
+  --thirdTextColor: #ffffff;
 
   --red1: #ff3333;
   --red2: #e64551;
@@ -17,6 +18,7 @@
   --grey1: #676f79;
   --grey2: #a0a6ac;
   --grey3: #fff8f7;
+  --grey4: #f2f2f2;
   --blue: #2b71db;
   --blue2: #389aea;
   --blue3: #55b0ff;
