--- a/frontend/src/components/statics/css/button.css
+++ b/frontend/src/components/statics/css/button.css
@@ -3,6 +3,8 @@
   outline: none;
   border: none;
   cursor: pointer !important;
+  width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 1919px) {
