--- a/frontend/src/components/statics/css/tag.css
+++ b/frontend/src/components/statics/css/tag.css
@@ -1,6 +1,8 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .tag_root {
+    height: 30px;
+    line-height: 30px;
     flex-grow: 1;
     background-color: var(--grey4);
     cursor: pointer;
@@ -15,7 +17,7 @@
     text-decoration: line-through;
   }
   .noteTagButton {
-    font-size: 0.8em;
+    font-size: 0.85em;
     position: relative;
     top: -2px !important;
     left: 2px;
